Fix broken styles.

--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -16,6 +16,7 @@
   .project-image {
     align-items: center;
     background: $color-disabled;
+    border-radius: 100%;
     display: flex;
     height: 12 * $grid-base;
     justify-content: center;
